[package]
name = "wasm-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = {path = "../rust-plugin"}
wasmer = { version = "3", default-features = false, features = ["js", "core"]}


[lib]
crate-type = ["cdylib", "staticlib", "rlib"]