[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = { version = "3", features= ["singlepass"] }
wasmer-wasi = "3"
serde = { version = "1.0", features = ["derive"] }
once_cell = { version = "1.4" }
rmp-serde = { version = "1.0" }
fp-bindgen-support = {git="https://github.com/fiberplane/fp-bindgen" , features = [
  "async",
  "host",
  "http",
] }


